apps/base/authelia/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      enableServiceLinks: false
      containers:
        - name: authelia
          image: docker.io/authelia/authelia:4.39.15
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9091
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 18
            periodSeconds: 5
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
            - name: data
              mountPath: /var/lib/authelia
      volumes:
        - name: config
          secret:
            secretName: authelia-config
        - name: data
          persistentVolumeClaim:
            claimName: authelia
