apps/base/authelia/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: apps
spec:
  selector:
    app: authelia
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
